<resources>
	<string name="app_name">Calculator</string>
	<string name="button_equation">=</string>
	<string name="button_dot">.</string>
	<string name="button_null">0</string>
	<string name="button_e">e</string>
	<string name="button_pi">&#960;</string>
	<string name="button_plus">+</string>
	<string name="button_three">3</string>
	<string name="button_two">2</string>
	<string name="button_one">1</string>
	<string name="button_1_x">1/x</string>
	<string name="button_minus">&#8722;</string>
	<string name="button_six">6</string>
	<string name="button_five">5</string>
	<string name="button_four">4</string>
	<string name="button_x_fact">x!</string>
	<string name="button_multiply">&#215;</string>
	<string name="button_nine">9</string>
	<string name="button_eight">8</string>
	<string name="button_seven">7</string>
	<string name="button_root">&#8730;</string>
	<string name="button_divide">&#247;</string>
	<string name="button_percent">%</string>
	<string name="button_x_thD">x^3</string>
	<string name="button_x_sq">x^2</string>
	<string name="button_x_y">x^y</string>
	<string name="button_tan">tan</string>
	<string name="button_cos">cos</string>
	<string name="button_sin">sin</string>
	<string name="button_degree">deg</string>
	<string name="button_2nd">2nd</string>
	<string name="button_ln">ln</string>
	<string name="button_lg">lg</string>
	<string name="button_bracketR">)</string>
	<string name="button_bracketL">(</string>
	<string name="button_clear">C</string>
</resources>